--- a/enviar.html
+++ b/enviar.html
@@ -30,7 +30,7 @@ document.getElementById("bEnviar").addEventListener("click", function(){
     <div class="wrapper">
     <div id="formulariocontacto">
     <form name="primerformulario" id="ff" method="post" action="envio.php">
-    <h1>Se a enviado tu correo correctamente</h1>
+    <h1>Se ha enviado tu correo correctamente</h1>
       <img class="img-fluid rounded-circle" src="img/okey.jpg" alt=""width=300px>
       <br>
       <a href="index.html" class="btn btn-primary btn-xl rounded-pill mt-5">Back</a>
